@@ -57,9 +57,6 @@ public:
         : m_metadata(propertyID, shorthandID, important, implicit, isInheritedProperty(propertyID))
         , m_value(value)
     {
-#if ENABLE(CSS_VARIABLES)
-    ASSERT((propertyID == CSSPropertyVariable) == (value && value->isVariableValue()));
-#endif
     }
 
     // FIXME: Remove this.
@@ -67,9 +64,6 @@ public:
         : m_metadata(metadata)
         , m_value(value)
     {
-#if ENABLE(CSS_VARIABLES)
-    ASSERT((metadata.m_propertyID == CSSPropertyVariable) == (value && value->isVariableValue()));
-#endif
     }
 
     CSSPropertyID id() const { return static_cast<CSSPropertyID>(m_metadata.m_propertyID); }
